# uuid-gen-rs

./: Cargo.toml  README.md
src/: main.rs
src/spec/: cli.yml
